--- a/Final General Analysis.ipynb
+++ b/Final General Analysis.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "06c15189",
+   "id": "2ba9ae45",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libaries\n",
     "import numpy as np \n",
     "import pandas as pd \n",
     "import seaborn as sns; sns.set(rc={'figure.figsize':(16,9)})\n",
@@ -16,10 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0f85f7ec",
+   "id": "3956e6b4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read the datasets\n",
     "olist_customers = pd.read_csv('olist_customers_dataset.csv')\n",
     "olist_geolocation = pd.read_csv('olist_geolocation_dataset.csv')\n",
     "olist_orders = pd.read_csv('olist_orders_dataset.csv')\n",
@@ -32,33 +34,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "19f1a233",
+   "execution_count": 14,
+   "id": "87228dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge the datasets\n",
+    "olist_new = olist_orders.merge(olist_items, on='order_id', how='left')\n",
+    "olist_new = olist_new.merge(olist_order_payments, on='order_id', how='outer', validate='m:m')\n",
+    "olist_new = olist_new.merge(olist_reviews, on='order_id', how='outer')\n",
+    "olist_new = olist_new.merge(olist_products, on='product_id', how='outer')\n",
+    "olist_new = olist_new.merge(olist_customers, on='customer_id', how='outer')\n",
+    "olist_new = olist_new.merge(olist_sellers, on='seller_id', how='outer')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "65c42868",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(119143, 39)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>order_status</th>\n",
+       "      <th>order_purchase_timestamp</th>\n",
+       "      <th>order_approved_at</th>\n",
+       "      <th>order_delivered_carrier_date</th>\n",
+       "      <th>order_delivered_customer_date</th>\n",
+       "      <th>order_estimated_delivery_date</th>\n",
+       "      <th>order_item_id</th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>...</th>\n",
+       "      <th>product_length_cm</th>\n",
+       "      <th>product_height_cm</th>\n",
+       "      <th>product_width_cm</th>\n",
+       "      <th>customer_unique_id</th>\n",
+       "      <th>customer_zip_code_prefix</th>\n",
+       "      <th>customer_city</th>\n",
+       "      <th>customer_state</th>\n",
+       "      <th>seller_zip_code_prefix</th>\n",
+       "      <th>seller_city</th>\n",
+       "      <th>seller_state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>e481f51cbdc54678b7cc49136f2d6af7</td>\n",
+       "      <td>9ef432eb6251297304e76186b10a928d</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>2017-10-02 10:56:33</td>\n",
+       "      <td>2017-10-02 11:07:15</td>\n",
+       "      <td>2017-10-04 19:55:00</td>\n",
+       "      <td>2017-10-10 21:25:13</td>\n",
+       "      <td>2017-10-18 00:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>87285b34884572647811a353c7ac498a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7c396fd4830fd04220f754e42b4e5bff</td>\n",
+       "      <td>3149</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>9350.0</td>\n",
+       "      <td>maua</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>e481f51cbdc54678b7cc49136f2d6af7</td>\n",
+       "      <td>9ef432eb6251297304e76186b10a928d</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>2017-10-02 10:56:33</td>\n",
+       "      <td>2017-10-02 11:07:15</td>\n",
+       "      <td>2017-10-04 19:55:00</td>\n",
+       "      <td>2017-10-10 21:25:13</td>\n",
+       "      <td>2017-10-18 00:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>87285b34884572647811a353c7ac498a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7c396fd4830fd04220f754e42b4e5bff</td>\n",
+       "      <td>3149</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>9350.0</td>\n",
+       "      <td>maua</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e481f51cbdc54678b7cc49136f2d6af7</td>\n",
+       "      <td>9ef432eb6251297304e76186b10a928d</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>2017-10-02 10:56:33</td>\n",
+       "      <td>2017-10-02 11:07:15</td>\n",
+       "      <td>2017-10-04 19:55:00</td>\n",
+       "      <td>2017-10-10 21:25:13</td>\n",
+       "      <td>2017-10-18 00:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>87285b34884572647811a353c7ac498a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7c396fd4830fd04220f754e42b4e5bff</td>\n",
+       "      <td>3149</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>9350.0</td>\n",
+       "      <td>maua</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>128e10d95713541c87cd1a2e48201934</td>\n",
+       "      <td>a20e8105f23924cd00833fd87daa0831</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>2017-08-15 18:29:31</td>\n",
+       "      <td>2017-08-15 20:05:16</td>\n",
+       "      <td>2017-08-17 15:28:33</td>\n",
+       "      <td>2017-08-18 14:44:43</td>\n",
+       "      <td>2017-08-28 00:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>87285b34884572647811a353c7ac498a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3a51803cc0d012c3b5dc8b7528cb05f7</td>\n",
+       "      <td>3366</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>9350.0</td>\n",
+       "      <td>maua</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0e7e841ddf8f8f2de2bad69267ecfbcf</td>\n",
+       "      <td>26c7ac168e1433912a51b924fbd34d34</td>\n",
+       "      <td>delivered</td>\n",
+       "      <td>2017-08-02 18:24:47</td>\n",
+       "      <td>2017-08-02 18:43:15</td>\n",
+       "      <td>2017-08-04 17:35:43</td>\n",
+       "      <td>2017-08-07 18:30:01</td>\n",
+       "      <td>2017-08-15 00:00:00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>87285b34884572647811a353c7ac498a</td>\n",
+       "      <td>...</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>ef0996a1a279c26e7ecbd737be23d235</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>sao paulo</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>9350.0</td>\n",
+       "      <td>maua</td>\n",
+       "      <td>SP</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           order_id                       customer_id  \\\n",
+       "0  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d   \n",
+       "1  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d   \n",
+       "2  e481f51cbdc54678b7cc49136f2d6af7  9ef432eb6251297304e76186b10a928d   \n",
+       "3  128e10d95713541c87cd1a2e48201934  a20e8105f23924cd00833fd87daa0831   \n",
+       "4  0e7e841ddf8f8f2de2bad69267ecfbcf  26c7ac168e1433912a51b924fbd34d34   \n",
+       "\n",
+       "  order_status order_purchase_timestamp    order_approved_at  \\\n",
+       "0    delivered      2017-10-02 10:56:33  2017-10-02 11:07:15   \n",
+       "1    delivered      2017-10-02 10:56:33  2017-10-02 11:07:15   \n",
+       "2    delivered      2017-10-02 10:56:33  2017-10-02 11:07:15   \n",
+       "3    delivered      2017-08-15 18:29:31  2017-08-15 20:05:16   \n",
+       "4    delivered      2017-08-02 18:24:47  2017-08-02 18:43:15   \n",
+       "\n",
+       "  order_delivered_carrier_date order_delivered_customer_date  \\\n",
+       "0          2017-10-04 19:55:00           2017-10-10 21:25:13   \n",
+       "1          2017-10-04 19:55:00           2017-10-10 21:25:13   \n",
+       "2          2017-10-04 19:55:00           2017-10-10 21:25:13   \n",
+       "3          2017-08-17 15:28:33           2017-08-18 14:44:43   \n",
+       "4          2017-08-04 17:35:43           2017-08-07 18:30:01   \n",
+       "\n",
+       "  order_estimated_delivery_date  order_item_id  \\\n",
+       "0           2017-10-18 00:00:00            1.0   \n",
+       "1           2017-10-18 00:00:00            1.0   \n",
+       "2           2017-10-18 00:00:00            1.0   \n",
+       "3           2017-08-28 00:00:00            1.0   \n",
+       "4           2017-08-15 00:00:00            1.0   \n",
+       "\n",
+       "                         product_id  ... product_length_cm product_height_cm  \\\n",
+       "0  87285b34884572647811a353c7ac498a  ...              19.0               8.0   \n",
+       "1  87285b34884572647811a353c7ac498a  ...              19.0               8.0   \n",
+       "2  87285b34884572647811a353c7ac498a  ...              19.0               8.0   \n",
+       "3  87285b34884572647811a353c7ac498a  ...              19.0               8.0   \n",
+       "4  87285b34884572647811a353c7ac498a  ...              19.0               8.0   \n",
+       "\n",
+       "   product_width_cm                customer_unique_id  \\\n",
+       "0              13.0  7c396fd4830fd04220f754e42b4e5bff   \n",
+       "1              13.0  7c396fd4830fd04220f754e42b4e5bff   \n",
+       "2              13.0  7c396fd4830fd04220f754e42b4e5bff   \n",
+       "3              13.0  3a51803cc0d012c3b5dc8b7528cb05f7   \n",
+       "4              13.0  ef0996a1a279c26e7ecbd737be23d235   \n",
+       "\n",
+       "   customer_zip_code_prefix customer_city  customer_state  \\\n",
+       "0                      3149     sao paulo              SP   \n",
+       "1                      3149     sao paulo              SP   \n",
+       "2                      3149     sao paulo              SP   \n",
+       "3                      3366     sao paulo              SP   \n",
+       "4                      2290     sao paulo              SP   \n",
+       "\n",
+       "   seller_zip_code_prefix seller_city  seller_state  \n",
+       "0                  9350.0        maua            SP  \n",
+       "1                  9350.0        maua            SP  \n",
+       "2                  9350.0        maua            SP  \n",
+       "3                  9350.0        maua            SP  \n",
+       "4                  9350.0        maua            SP  \n",
+       "\n",
+       "[5 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "olist_train = olist_orders.merge(olist_items, on='order_id', how='left')\n",
-    "olist_train = olist_train.merge(olist_order_payments, on='order_id', how='outer', validate='m:m')\n",
-    "olist_train = olist_train.merge(olist_reviews, on='order_id', how='outer')\n",
-    "olist_train = olist_train.merge(olist_products, on='product_id', how='outer')\n",
-    "olist_train = olist_train.merge(olist_customers, on='customer_id', how='outer')\n",
-    "olist_train = olist_train.merge(olist_sellers, on='seller_id', how='outer')\n",
+    "# Organize work \n",
+    "id_cols = ['order_id', 'seller_id', 'customer_id', 'order_item_id', 'product_id', \n",
+    "           'review_id', 'customer_unique_id', 'seller_zip_code_prefix']\n",
+    "#categorical columns\n",
+    "cat_cols = olist_new.nunique()[olist_new.nunique() <= 27].keys().tolist()\n",
+    "# cat_cols = [x for x in cat_cols if x not in target_col]\n",
     "\n",
-    "print(olist_train.shape)"
+    "#numerical columns\n",
+    "num_cols = [x for x in olist_new.columns if x not in cat_cols + id_cols]\n",
+    "\n",
+    "#Binary columns with 2 values\n",
+    "bin_cols = olist_new.nunique()[olist_new.nunique() == 2].keys().tolist()\n",
+    "\n",
+    "#Columns more than 2 values\n",
+    "multi_cols = [i for i in cat_cols if i not in bin_cols]\n",
+    "\n",
+    "olist_new.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "344f1058",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Customer Analysis\n",
+    "# What regions have high demand?\n",
+    "# In what months?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "b7a55517",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time-stamp related data\n",
+    "timestamp_cols = ['order_purchase_timestamp', 'order_approved_at', 'order_delivered_carrier_date', \n",
+    "                  'order_delivered_customer_date', 'order_estimated_delivery_date']\n",
+    "\n",
+    "for col in timestamp_cols:\n",
+    "    olist_new[col] = pd.to_datetime(olist_new[col])\n",
+    "\n",
+    "# Time-Stamps transition\n",
+    "olist_new['purchase_year'] = olist_new['order_purchase_timestamp'].dt.year\n",
+    "olist_new['purchase_month'] = olist_new['order_purchase_timestamp'].dt.month\n",
+    "olist_new['purchase_day'] = olist_new['order_purchase_timestamp'].dt.day\n",
+    "olist_new['purchase_day_of_week'] = olist_new['order_purchase_timestamp'].dt.dayofweek\n",
+    "olist_new['purchase_hour'] = olist_new['order_purchase_timestamp'].dt.hour\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4cd240b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Number of orders per year\n",
+    "orders_per_year = olist_new['purchase_year'].value_counts().sort_index()\n",
+    "\n",
+    "# Number of orders per month\n",
+    "orders_per_month = olist_new.groupby('purchase_month').size()\n",
+    "\n",
+    "# Number of orders per day of the week\n",
+    "orders_per_day_of_week = olist_new['purchase_day_of_week'].value_counts().sort_index()\n",
+    "\n",
+    "# Number of orders per hour\n",
+    "orders_per_hour = olist_new['purchase_hour'].value_counts().sort_index()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "912b062e",
+   "id": "003a13a7",
    "metadata": {},
    "outputs": [],
    "source": []
