--- a/data_import_An.ipynb
+++ b/data_import_An.ipynb
@@ -1554,7 +1554,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TIL6022",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1568,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
