--- a/Sam General Analysis .ipynb
+++ b/Sam General Analysis .ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "df63723d",
+   "id": "a8152d84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f937f936",
+   "id": "d142d56a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "90414d81",
+   "id": "38efad6d",
    "metadata": {},
    "outputs": [
     {
@@ -65,9 +65,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "196bc369",
+   "metadata": {},
+   "source": [
+    "Hallo\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "bf8c66ce",
+   "id": "889af3cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "00c9db6a",
+   "id": "f3529ca3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd4d4a9b",
+   "id": "64b446e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -96,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f3f7ea34",
+   "id": "fefc38e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8fd50277",
+   "id": "0086891b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2479e2c2",
+   "id": "0ba32f3e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -153,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "15990b37",
+   "id": "3b897e1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e03a51dc",
+   "id": "5c8329c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e23f595",
+   "id": "94061bf0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -193,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f3e31426",
+   "id": "e012b825",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f292e8bb",
+   "id": "a859136f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0a46568b",
+   "id": "86ae940e",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3c2eab5",
+   "id": "148b62a6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -337,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "9f6f3cd9",
+   "id": "3f2c55a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "586cd97d",
+   "id": "1cd6f7fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "3fb29c41",
+   "id": "be031ec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e46aaa09",
+   "id": "6dbadfa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e1a712ee",
+   "id": "10530068",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8618c0b8",
+   "id": "113804bd",
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e26cd676",
+   "id": "1095c493",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "56b9e08e",
+   "id": "0efebf6e",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "61961b22",
+   "id": "9535fd96",
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ff81ee72",
+   "id": "634ec662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +604,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7a606ada",
+   "id": "d6cef7d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "909cf259",
+   "id": "da4112f9",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e9e40f3",
+   "id": "2637e395",
    "metadata": {},
    "outputs": [],
    "source": []
